--- a/templates/hospital/citaPrevia.html.twig
+++ b/templates/hospital/citaPrevia.html.twig
@@ -2,14 +2,14 @@
 
 {% block contenido %}
 
-    {% block body %}
-        <section class="bg-white py-5 text-center">
-        <h2>Nueva cita previa</h2>
-            <div class="container justify-content-start">
-                {{ include('citas/_form.html.twig') }}
-            <br>
-           </div>
-        </section>
-    {% endblock %}
+    <section class="bg-white py-5">
+        <div class="container text-black">
+            <h2>Nueva cita previa</h2>
+                <div class="container justify-content-start">
+                    {{ include('citas/_form.html.twig') }}
+                <br>
+                </div>
+        </div>
+    </section>
 
 {% endblock %}
