--- a/templates/hospital/bolsaTrabajo.html.twig
+++ b/templates/hospital/bolsaTrabajo.html.twig
@@ -4,8 +4,9 @@
     <section class="bg-white py-5">
         <div class="container text-black">
             <h2>Inscripción oferta de empleo:</h2>
+                {% include 'comunes/_mensajes.html.twig' %}
                 <div class="container justify-content-start">
-                    {{ include('bolsa_empleo/_form.html.twig') }}
+                    {{ include('comunes/_form.html.twig') }}
                 <br>
                 </div>
         </div>
