--- a/templates/hospital/citaPrevia.html.twig
+++ b/templates/hospital/citaPrevia.html.twig
@@ -6,7 +6,7 @@
         <div class="container text-black">
             <h2>Nueva cita previa</h2>
                 <div class="container justify-content-start">
-                    {{ include('citas/_form.html.twig') }}
+                    {{ include('comunes/_form.html.twig') }}
                 <br>
                 </div>
         </div>
