--- a/templates/usuarios/listadoUsuarios.html.twig
+++ b/templates/usuarios/listadoUsuarios.html.twig
@@ -33,5 +33,7 @@
                 </tbody>
             </table>
 
-            <a class="btn btn-secondary rounded-pill px-5" href="{{ path('app_nuevo_usuario') }}">Nuevo usuario</a>
+    <a class="btn btn-secondary rounded-pill px-5" href="{{ path('app_nuevo_usuario') }}">Nuevo usuario</a>
+    <a class="btn btn-dark rounded-pill px-5" href="/gestion_usuarios">Volver área privada</a>
+
 {% endblock %}
