--- a/templates/usuarios/nuevoUsuario.html.twig
+++ b/templates/usuarios/nuevoUsuario.html.twig
@@ -5,7 +5,7 @@
     <div class="container">
         <h2>Nuevo usuario:</h2>
          {% include 'comunes/_mensajes.html.twig' %}
-            {{ include('user/_form.html.twig') }}
+            {{ include('comunes/_form.html.twig') }}
 
 
 {% endblock %}
