--- a/templates/bolsaEmpleo/listadoEmpleos.html.twig
+++ b/templates/bolsaEmpleo/listadoEmpleos.html.twig
@@ -31,4 +31,5 @@
                 {% endfor %}
                 </tbody>
             </table>
+    <a class="btn btn-dark rounded-pill px-5" href="/gestion_usuarios">Volver área privada</a>
 {% endblock %}
