--- a/templates/citas/citaPrevia.html.twig
+++ b/templates/citas/citaPrevia.html.twig
@@ -5,6 +5,7 @@
     <section class="bg-white py-5">
         <div class="container text-black">
             <h2>Nueva cita previa</h2>
+                {% include 'comunes/_mensajes.html.twig' %}
                 <div class="container justify-content-start">
                     {{ include('comunes/_form.html.twig') }}
                 <br>
