añadida la gestión de los medicos y espacialidades

--- a/templates/encuestas/listadoEncuestas.html.twig
+++ b/templates/encuestas/listadoEncuestas.html.twig
@@ -1,4 +1,4 @@
-{% extends 'comunes/default.html.twig' %}
+{% extends 'comunes/_default.html.twig' %}
 
 {% block contenido %}
 <section class="bg-white py-5">
@@ -27,5 +27,5 @@
                 {% endfor %}
                 </tbody>
             </table>
-            <a class="btn btn-dark rounded-pill px-5" href="/gestion_usuarios">Volver área privada</a>
+            <a class="btn btn-dark rounded-pill px-5" href="/area_privada">Volver área privada</a>
 {% endblock %}
