--- a/templates/medicos/nuevoMedico.html.twig
+++ b/templates/medicos/nuevoMedico.html.twig
@@ -3,9 +3,11 @@
 {% block contenido %}
 <section class="bg-white py-5">
     <div class="container">
-        <h2>Crear nuevo usuario:</h2>
+        <h2>Crear nuevo médico:</h2>
          {% include 'comunes/_mensajes.html.twig' %}
             {{ include('comunes/_form.html.twig') }}
 
 
 {% endblock %}
+
+
