--- a/templates/comunes/_footer.html.twig
+++ b/templates/comunes/_footer.html.twig
@@ -1,4 +1,4 @@
-{# templates/footer.html.twig #}
+{# templates/_footer.html.twig #}
 <footer id="footer" class="mt-5 border-top">
 <div class="container">
     <div class="row d-flex flex-wrap justify-content-between py-5">
