--- a/templates/comunes/_menu.html.twig
+++ b/templates/comunes/_menu.html.twig
@@ -1,4 +1,4 @@
-{# templates/menu.html.twig #}
+{# templates/_menu.html.twig #}
 <nav class="navbar navbar-expand-lg bg-light text-uppercase fs-6 p-3 border-bottom align-items-center">
     <div class="container-fluid">
       <div class="row justify-content-between align-items-center w-100">
