--- a/templates/hospital/index.html.twig
+++ b/templates/hospital/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'comunes/default.html.twig' %}
+{% extends 'comunes/_default.html.twig' %}
 
 {% block contenido %}
 <section id="billboard" class="bg-light py-5">
