--- a/templates/medicos/editarMedico.html.twig
+++ b/templates/medicos/editarMedico.html.twig
@@ -3,9 +3,9 @@
 {% block contenido %}
 <section class="bg-white py-5">
     <div class="container text-black">
-        <h2>Editar cita: {{cita.id}} - {{cita.nombre}}</h2>
+        <h2>Editar médico: {{medico.nombre}} {{medico.apellido}}</h2>
         {% include 'comunes/_mensajes.html.twig' %}
         {{ include('comunes/_form.html.twig', {'button_label': 'Actualizar'}) }}
 
-
 {% endblock %}
+
