--- a/templates/medicos/listadoMedicos.html.twig
+++ b/templates/medicos/listadoMedicos.html.twig
@@ -40,5 +40,6 @@
             </table>
 
     <a class="btn btn-secondary rounded-pill px-5" href="{{ path('app_nuevo_medico') }}">Crear nuevo</a>
+    <a class="btn btn-dark rounded-pill px-5" href="/area_privada">Volver área privada</a>
 
 {% endblock %}
